Fix spacing on business show page

--- a/app/assets/stylesheets/components/restaurant_show/restaurant_show.scss
+++ b/app/assets/stylesheets/components/restaurant_show/restaurant_show.scss
@@ -62,7 +62,7 @@
 }
 
 .business-right {
-  margin-top: 20px;
+  margin-top: 8px;
   display: flex;
   align-items: flex-end;
   flex-direction: column;
